--- a/index.html
+++ b/index.html
@@ -15,23 +15,36 @@
   <script>
 
 
+    for (let i = 0; i < 4; i++) {
+      let yearText = document.createElement('div');
+      root.append(yearText);
+    }
+
 
     function thisTime() {
 
       let dt = new Date();
 
-      let year = dt.getFullYear();
+      let year = dt.getFullYear(); //연도
       let month = dt.getMonth() + 1; //달에 1 더해야 정상출력.
-      let day = dt.getDay(); //요일
+
+      let day = dt.getDay(); //요일 문자열로
       weekday = ["월요일", "화요일", "수요일", "목요일", "금요일", "토요일", "일요일"];
       wd = weekday[day];
 
 
-      let hour = dt.getHours();
-      let min = dt.getMinutes();
-      let sec = dt.getSeconds();
+      let hour = dt.getHours(); //시
+      let min = dt.getMinutes(); //분
+      let sec = dt.getSeconds(); //초
 
-      root.innerHTML = `${year}년 \n ${month}월 ${day}일 ${hour}시 ${min}분 ${sec}초 ${wd}`;
+
+      root.children[0].innerText = year;
+      root.children[1].innerText = month + "월" + day + "일";
+      root.children[2].innerText = hour + ":" + min + ":" + sec;
+      root.children[3].innerText = wd;
+
+
+
 
 
     }
@@ -51,9 +64,7 @@
 
     // let date = dt.getFullYear() + '년' + dt.getMonth() + '월' + dt.getDate() + '일' + dt.getHours() + '시' + dt.getMinutes() + '분' + dt.getSeconds();
 
-
-
-
+    root.children[2].style.fontSize = "150px";
 
   </script>
 
@@ -70,10 +81,11 @@
       width: 100vw;
       height: 100vh;
       background-color: rgb(57, 192, 255);
+
       color: white;
       text-align: center;
-      font-size: 50px;
       font-weight: bold;
+      font-size: 80px;
 
     }
   </style>
