--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
 
     #root {
 
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+
+
       width: 100vw;
       height: 100vh;
       background-color: rgb(57, 192, 255);
